Fix floating footer / input focus on mobile
The floating footer now works correctly on mobile and desktop sites.
The default font-size for all in-use input elements have been set to
16px or higher in order to stop forced focusing on Safari.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,11 @@ body {
     margin: 0px;
 }
 
+input[type="text"],
+input[type="password"] {
+  font-size: 16px;
+}
+
 #root {
     height: 100vh;
 }
